moved main into new class sort of

--- a/Electricity_And_Magnetism_Visualizer/Electricity_And_Magnetism_Visualizer.vcxproj.filters
+++ b/Electricity_And_Magnetism_Visualizer/Electricity_And_Magnetism_Visualizer.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="visualizer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="visualizer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
