--- a/Electricity_And_Magnetism_Visualizer/Electricity_And_Magnetism_Visualizer.vcxproj
+++ b/Electricity_And_Magnetism_Visualizer/Electricity_And_Magnetism_Visualizer.vcxproj
@@ -116,12 +116,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>B:\CppLibraries\SDL2_ttf-2.20.2\include;B:\CppLibraries\SDL2_image-2.6.3\include;B:\CppLibraries\SDL2-2.26.5\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\CppLibraries\SDL2-2.26.5\include;D:\CppLibraries\SDL2_image-2.6.3\include;D:\CppLibraries\SDL2_ttf-2.20.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>B:\CppLibraries\SDL2_ttf-2.20.2\lib\x64;B:\CppLibraries\SDL2_image-2.6.3\lib\x64;B:\CppLibraries\SDL2-2.26.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\CppLibraries\SDL2_ttf-2.20.2\lib\x64;D:\CppLibraries\SDL2_image-2.6.3\lib\x64;D:\CppLibraries\SDL2-2.26.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -144,11 +144,17 @@
   <ItemGroup>
     <ClCompile Include="drawer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="menu.cpp" />
     <ClCompile Include="visualizer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="drawer.h" />
+    <ClInclude Include="menu.h" />
+    <ClInclude Include="screen.h" />
     <ClInclude Include="visualizer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="D:\FontLibraries\roboto\Roboto-Regular.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
